BJS2-67116 fix