@@ -8,13 +8,15 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.context.ApplicationContext;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -26,48 +28,52 @@ class HashServiceTest {
     @Mock
     private FreeHashGenerator freeHashGenerator;
 
+    @Mock
+    private ApplicationContext applicationContext;
+
     @InjectMocks
     private HashService hashService;
 
-    private FreeHash freeHash;
+    private final FreeHash freeHash = new FreeHash("abc123");
 
     @BeforeEach
     void setUp() {
-        freeHash = new FreeHash("abc123");
-        ReflectionTestUtils.setField(hashService, "maxCapacity", 10L);
+        ReflectionTestUtils.setField(hashService, "maxDbCapacity", 5L);
+        ReflectionTestUtils.setField(hashService, "maxCacheCapacity", 10L);
         ReflectionTestUtils.setField(hashService, "refillThresholdPercent", 50);
     }
 
     @Test
-    void warmUpCache_shouldFillCacheAtStartup() {
-        when(freeHashRepository.count()).thenReturn(0L);
-        when(freeHashGenerator.generateHashes(anyList())).thenReturn(Arrays.asList(freeHash));
+    void warmUpCache_shouldRefillCacheFromDb() {
+        when(freeHashRepository.count()).thenReturn(5L);
+        when(freeHashRepository.deleteAndReturnFreeHashes(10)).thenReturn(List.of(freeHash));
 
         hashService.warmUpCache();
 
-        verify(freeHashRepository).count();
-        verify(freeHashGenerator).generateHashes(anyList());
+        verify(freeHashRepository).deleteAndReturnFreeHashes(10);
+        verifyNoInteractions(freeHashGenerator);
     }
 
     @Test
-    void refill_shouldAddHashesFromDbWhenAvailable() {
-        List<FreeHash> dbHashes = Arrays.asList(freeHash);
-        when(freeHashRepository.count()).thenReturn(1L);
-        when(freeHashRepository.findAndLockFreeHashes(1)).thenReturn(dbHashes);
+    void refill_shouldTriggerDbRefillIfNotEnoughHashesInDb() {
+        when(freeHashRepository.count()).thenReturn(2L);
+        when(freeHashRepository.deleteAndReturnFreeHashes(3)).thenReturn(List.of(freeHash));
+        when(applicationContext.getBean(HashService.class)).thenReturn(hashService);
 
-        hashService.refill(1);
+        hashService.refill(3);
 
-        verify(freeHashRepository).deleteAllByIdInBatch(anyList());
-        verify(freeHashRepository).findAndLockFreeHashes(1);
+        verify(applicationContext).getBean(HashService.class);
+        verify(freeHashGenerator).refillDb(6L);
     }
 
     @Test
-    void refill_shouldGenerateNewHashesWhenNotEnoughInDb() {
-        when(freeHashRepository.count()).thenReturn(0L);
-        when(freeHashGenerator.generateHashes(anyList())).thenReturn(Arrays.asList(freeHash));
+    void refill_shouldNotTriggerDbRefillIfEnoughInDb() {
+        when(freeHashRepository.count()).thenReturn(20L);
+        when(freeHashRepository.deleteAndReturnFreeHashes(5)).thenReturn(List.of(freeHash));
 
-        hashService.refill(1);
+        hashService.refill(5);
 
-        verify(freeHashGenerator).generateHashes(anyList());
+        verify(freeHashRepository).deleteAndReturnFreeHashes(5);
+        verify(freeHashGenerator, never()).refillDb(anyLong());
     }
 }
